--- a/modeling/Model.ipynb
+++ b/modeling/Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4                 0.55                         Y                           4  "
       ]
      },
-     "execution_count": 257,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "max                     30.000000  "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's focused now on the categorical features"
+    "### Numerical features"
    ]
   },
   {
@@ -693,6 +693,7 @@
     "        'Loan amount distribution', 'Loan interest rate distribution',\\\n",
     "        'Credit history length distribution', 'Default status distribution']\n",
     "\n",
+    "# Plot the numerical features distributions\n",
     "fig, axs = plt.subplots(len(num_feat), 1, figsize=(5,25))\n",
     "for i in range(len(num_feat)):\n",
     "    axs[i].hist(df[num_feat[i]], bins=30)\n",
@@ -708,6 +709,13 @@
     "Most of the distributions are right-skewed. We could remove some additional outliers in the right tails of some distributions, but let's keep them for a first analysis.\n",
     "\n",
     "In the particular case of the target feature, *loan_status*, we notice that we are dealing with an imbalanced dataset where we have much more records of non-default loans than default loans. Again, for a first analysis we will not apply any resampling technique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categorical features "
    ]
   },
   {
@@ -737,6 +745,7 @@
     "titles=['Person home ownership distribution', 'Loan intent distribution',\\\n",
     "        'Loan grade distribution', 'Past default distribution']\n",
     "\n",
+    "# Display a stacked bar plot for every categorical features distributions\n",
     "fig, axs = plt.subplots(len(cat_feat), 1, figsize=(10,15))\n",
     "for i in range(len(cat_feat)):\n",
     "    pivot_df=df.groupby([cat_feat[i], 'loan_status']).size().unstack()\n",
@@ -771,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -868,6 +877,10 @@
     "seed=93\n",
     "\n",
     "def classifier_pipeline(classifier, feature_scaling=False, resampling_technique='None'):\n",
+    "    \"\"\"Build and return pipeline from a classifier with the following steps: one-hot encode the categorical features,\\\n",
+    "    perfom feature scaling if feature_scaling=True, resample the data with the value of resampling_technique \\\n",
+    "    and instantiate the classifier.\"\"\"\n",
+    "    \n",
     "    # Features to one-hot-encode\n",
     "    ohe_feat=['person_home_ownership','loan_intent', 'cb_person_default_on_file', 'loan_grade']\n",
     "    # One hot encode the categorical features\n",
@@ -907,6 +920,8 @@
     "f2_score=make_scorer(fbeta_score,beta=2)\n",
     "\n",
     "def pipeline_cv_scores(pipeline, X, y):\n",
+    "    \"\"\"Return the F2 and ROC AUC scores of pipeline after a 5-fold stratified cross validation.\"\"\"\n",
+    "    \n",
     "    cv=StratifiedKFold(n_splits=5, shuffle=True, random_state=seed)\n",
     "    \n",
     "    scores={}\n",
@@ -929,6 +944,13 @@
     "    scores['test_f2']=np.array(f2_scores)\n",
     "    \n",
     "    return scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we import the classifiers we want to assess in this first part of the model selection. At the end we will only keep the best three."
    ]
   },
   {
@@ -979,6 +1001,13 @@
    "metadata": {},
    "source": [
     "### No resampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's evaluate the scores of the models without any resampling technique."
    ]
   },
   {
@@ -1064,6 +1093,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We noted previously that we are working with an imbalanced dataset. Specifically: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of entries with 'default' class (minority class): 5170\n",
+      "Number of entries with 'non-default' class (majority class): 18397\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of entries with 'default' class (minority class): {}\".format((y_train==1).sum()))\n",
+    "print(\"Number of entries with 'non-default' class (majority class): {}\".format((y_train==0).sum()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The entries of the minority class (default) represents a $21\\%$ of the total number of entries. This imbalance may be influencing the way the models are trained by paying more attention to the majority class and relegating the ones of the minority class. For that reason, we should perform some resampling techniques to the data before training it. There are many resampling techniques available, but all of them seek to balance the number of entries of the two classes, some of them by reducing the number of entries of the majority class, others by increasing the number of entries of the minority class or even by combining the two approaches.\n",
+    "\n",
+    "In this part of the analysis we will evaluate the same classifiers as before, but with a resampling technique. Specifically, we will use the Random Oversampling technique, which consists on randomly selecting examples of the minority class and adding it to the training dataset. We will use the imblearn module, from where we can import many resampling algorithms."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1078,7 +1142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifiers_scores={}\n",
+    "# Collect the scores for the pipelines with Random oversampling\n",
+    "classifiers_scores={{}\n",
     "\n",
     "for classifier in classifiers[:3]:\n",
     "    pipeline=classifier_pipeline(classifier[1], feature_scaling=True, resampling_technique=RandomOverSampler(random_state=seed))\n",
@@ -1150,9 +1215,9 @@
    "source": [
     "Applying random oversampling had a small effect in the ROC AUC but improved the recall considerably for most of the estimators. That is, in general, the resampling technique is useful to improve the performance of the classifiers.\n",
     "\n",
-    "So far, XGBoost seems to be the most promising model but we did not perform any hyperparameter tuning yet, so, the next two classifiers(gradient boosting and random forest) still have chances to overcome it. We will that in the next section.\n",
+    "So far, XGBoost seems to be the most promising model but we did not perform any hyperparameter tuning yet, so, the next two classifiers(gradient boosting and random forest) still have chances to overcome it.\n",
     "\n",
-    "Before that, let's explore more on the resampling techniques. Let's just take one estimator(XGBoost) to see how different techniques affect the performance of the model. We will try with the following ones:\n",
+    "We will evaluate those three models with hyperparameter tuning, but before, let's explore more the resampling techniques. Let's just take one estimator(XGBoost) to see how different techniques affect the performance of the model. We will try with the following ones:\n",
     "- Undersampling: Random undersampling, Tomek Links, Near Miss.\n",
     "- Oversampling: Random oversampling, SMOTE\n",
     "- Combined over and under sampling: SMOTE + Tomek links"
@@ -1247,6 +1312,15 @@
     "plt.legend(fontsize=11, loc='lower right', bbox_to_anchor=(1.3,0))\n",
     "plt.title('ROC AUC and F2 means for XGBoost with resampling techniques', fontsize=15)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the Random Undersampling technique presents the higher F2 score, although it is closely followed by the Edited Nearest Neighbors and the RandomOversampling techniques. Since RandomUndersampling is also the less computationally expensive of these three techniques, we will keep it.\n",
+    "\n",
+    "Next, we will do the hyperparameter tuning of the three classifiers selected before (Random Forest, Gradient boosting and XGBoost) with the Random Undersampling technqiue applied to the training data."
    ]
   },
   {
@@ -1582,7 +1656,7 @@
     "Here we are assuming that the  Loss Given Default (LGD) is 1.0. That is, if a loan defaults we lose the $100\\%$ of the loan amount.\n",
     "- **Profit percentage**: The ratio of the profit over the total amount of required loans (in percentage).\n",
     "\n",
-    "The profit percentage is a good indicator of the performance of the model as it is independent of the total amount of loans required. We will choose the threshold to maximize this indicator. "
+    "The profit percentage is a good indicator of the performance of the model as it is independent of the total amount of loans required. We will choose the threshold that maximizes this indicator."
    ]
   },
   {
@@ -1592,7 +1666,7 @@
    "outputs": [],
    "source": [
     "def strategy_table(X, y_true, y_pred_proba=None, acceptance_rates=np.arange(0.3,1.05,0.05)):\n",
-    "    \"\"\"Build the strategy.\"\"\"\n",
+    "    \"\"\"Build and return the strategy table.\"\"\"\n",
     "    X_y=X.assign(loan_status=y_true)\n",
     "    thresholds=[]\n",
     "    bad_rates=[]\n",
@@ -1872,12 +1946,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The strategy table shows that there is an optimum value for the threshold in order to maximize the profit percentage. In this case this value is around $0.09$ corresponding to a profit percentage of $3.73\\%$ and an acceptance rate of $55\\%$.\n",
+    "\n",
+    "To determine this optimal threshold more accurately, we will perform a 10-fold cross validation on the training dataset and select the best threshold for each fold. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
     "def threshold_cv(model, X, y):\n",
+    "    \"\"\"Performs cross validation and returns the optimal values of profit percentage, threshold,\\\n",
+    "    acceptance rate and bad rates.\"\"\"\n",
     "    cv=StratifiedKFold(n_splits=10, shuffle=True, random_state=seed)\n",
     "    \n",
     "    best_vars={}\n",
@@ -1926,6 +2011,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The values corresponding to the best profit percentages of each fold on the cross validation procedure are:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
@@ -1949,6 +2041,13 @@
    ],
    "source": [
     "thresh_cv_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we compute the mean and the standard deviation of the indicators and display their confidence interval with 2 standard deviations."
    ]
   },
   {
@@ -2048,7 +2147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous plot we see the ditribution of the predicted probabilities of the test set along with a dashed red line signaling the position of the threshold that discriminate between non default and default loans."
+    "In this plot we see the ditribution of the predicted probabilities of the test set along with a dashed red line signaling the position of the threshold that discriminate between non default and default loans. Let'suse this threshold to compute the acceptance rate, bad rate and profit percentage."
    ]
   },
   {
@@ -2100,7 +2199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the model suggests to accept $64\\%$ of the loans requirements. If we would follow the model recomendations we would have a profit of $3.8\\%$, which is in accordance with the estimated profit percentage of $[3.6 \\%, 4.8\\%]$"
+    "We see that the model suggests to accept $64\\%$ of the loans requirements. If we follow the model recommendation we would have a profit of $3.8\\%$, which is in accordance with the estimated profit percentage interval of $[3.6 \\%, 4.8\\%]$"
    ]
   },
   {
@@ -2169,7 +2268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A profit percentage of $3.8\\%$ is good but let's see how it compares with the optimal profit percentage(the best maximum profit we could get if we would have known previously what is the best threshold). With that in mind, let's build the strategy table."
+    "A profit percentage of $3.8\\%$ is good but let's see how it compares with the optimal profit percentage(the best maximum profit we could get if we would have known previously what is the best threshold).Let's build the strategy table."
    ]
   },
   {
@@ -2427,7 +2526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the optimal profit percentage we could obtain is around $3.847\\%$ if we would have chosen a threshold of $0.37$ with an acceptance rate of $0.7$. This profit is very near to the profit we obtain with our model. **We were off only by $\\bf{0.0097}\\%$ to hit the maximum profit!!**"
+    "We see that the optimal profit percentage we could obtain is around $3.847\\%$ if we would have chosen a threshold of $0.37$ with an acceptance rate of $0.7$. This profit is very near to the profit we obtain with our model threshold. **We were off only by $\\bf{0.0097}\\%$ to hit the maximum profit!!**"
    ]
   },
   {
