--- a/modeling/Model.ipynb
+++ b/modeling/Model.ipynb
@@ -2569,7 +2569,7 @@
    "source": [
     "- A model of credit risk was build in order to maximize the portfolio profits from an imbalanced dataset.\n",
     "- Two scores were used to select the best model: F2 and ROC AUC (in that order).\n",
-    "- A first model discrimination was performed by estimating the scores of several models without any hyperparameter tuning. This was done for two cases: for data without a resampling technique and for the same data with an oversampling technique. Additionaly, a performance estimation was done for the XGBoost estimator with different resampling techniques. After this, three models were selected to further exploration (XGBoostClassifier, GradientBoostingClassifier and RandomForestClassifier). We also select the Random Undersampling technique as the best resampling technique.\n",
+    "- A first model discrimination was performed by estimating the scores of several models without any hyperparameter tuning. This was done for two cases: for data without a resampling technique and for the same data with an oversampling technique. Additionaly, a performance estimation was done for the XGBoost classifier with different resampling techniques. After this, three models were selected for further exploration (XGBoostClassifier, GradientBoostingClassifier and RandomForestClassifier). We also selected the Random Undersampling technique as the best resampling technique.\n",
     "- A hyperparameter tuning was performed for the three classifiers and the XGBoostClassifier with customized hyperparameters was chosen as the best one.\n",
     "- A threshold for this selected model was chosen to maximize the profit percentage.\n",
     "- Finally, the selected model was evaluated with the test set and it was seen that its performace it is accordance with the performace estimation of the model. The true profit percentage obtained was very satisfying whe compared with the optimal profit percentage."
@@ -2590,6 +2590,13 @@
     "\n",
     "The model ensures a profit percentage of $4.213\\% \\pm 0.571\\%$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
